<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>

  </data>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/decrease_rep_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_down_chevron"/>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reps_text_input_layout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_exercise_reps_hint">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/reps_text_input_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:maxLength="5"/>
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/increase_rep_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_up_chevron"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/decrease_weight_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_down_chevron"/>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_text_input_layout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_exercise_weight_hint">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/weight_text_input_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:maxLength="5"/>
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/increase_weight_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_up_chevron"/>
    </LinearLayout>
  </LinearLayout>
</layout>

