<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>

  </data>
  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <include
          android:id="@+id/exercise_set_editor"
          layout="@layout/exercise_set_editor"/>

        <Button
          android:id="@+id/add_set_button"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/ic_add_circle_black_24dp"/>
      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/activity_exercise_completed_text"
        android:textSize="20sp"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"/>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_sets_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/finish_exercise_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:layout_gravity="bottom|end"
      android:tint="@color/white"
      app:srcCompat="@drawable/ic_check_black_24dp"/>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>