...
    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:text="@string/app_name"
...
